--- a/index-html5.html
+++ b/index-html5.html
@@ -11,22 +11,22 @@
 
 <body class="layout">
     
-    <section class="hero green p-1">
+    <header class="hero green">
         <h1 class="container">Suur pealkiri</h1>
-    </section>
-    <div class="redd full-width">
-        <nav class="container red p-1">Navi</nav>
-    </div>
+    </header>
+    <nav class="redd full-width">
+        <div class="container red">Navi</nav>
+    </nav>
     <main class="container blue">
-        <section class="p-1">
+        <section class="">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem dolore eos doloribus cupiditate
                 tempore laboriosam fuga facilis eaque alias animi distinctio, nemo temporibus quidem aut, enim at labore
                 commodi sequi.</p>
         </section>
     </main>
-    <div class="redd full-width">
-        <footer class="container red p-1">Footer</footer>
-    </div>
+    <footer class="redd full-width">
+        <div class="container red">Footer</div>
+    </footer>
 </body>
 
 </html>
