--- a/index-start.html
+++ b/index-start.html
@@ -10,10 +10,10 @@
 </head>
 
 <body class="layout">
-    
-    <section class="hero green p-1">
+
+    <header class="hero green p-1">
         <h1 class="container">Suur pealkiri</h1>
-    </section>
+    </header>
     <div class="redd full-width">
         <nav class="container red p-1">Navi</nav>
     </div>
